--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/react": "^3.3.1",
     "@astrojs/vercel": "^7.5.3",
     "astro": "^4.5.14",
     "typescript": "^5.4.3"
