--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/react": "^3.3.4",
     "@astrojs/vercel": "^7.6.0",
-    "astro": "^4.8.4",
+    "astro": "^4.8.7",
+    "npm": "^10.8.0",
     "typescript": "^5.4.3"
   }
 }
