--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/react": "^3.6.3",
-    "@astrojs/vercel": "^7.8.2",
-    "astro": "^4.16.15",
+    "@astrojs/vercel": "^8.0.2",
+    "astro": "5.1.7",
     "npm": "^10.9.0",
-    "typescript": "^5.4.3"
+    "typescript": "^5.7.3"
   }
 }
