--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/vercel": "^8.0.2",
-    "astro": "5.1.7",
+    "astro": "^5.1.8",
     "npm": "^10.9.0",
     "typescript": "^5.7.3"
   }
